--- a/ModelPoliticians.html
+++ b/ModelPoliticians.html
@@ -286,24 +286,24 @@ kable(dtm.eval.nb)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
+<td align="right">NA</td>
 <td align="right">0.5000000</td>
-<td align="right">0.8333333</td>
-<td align="right">NaN</td>
-<td align="right">NaN</td>
+<td align="right">NA</td>
+<td align="right">NA</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
+<td align="right">NA</td>
 <td align="right">1.0000000</td>
-<td align="right">1.0000000</td>
-<td align="right">0</td>
-<td align="right">0.6666667</td>
+<td align="right">1</td>
+<td align="right">NA</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
+<td align="right">NA</td>
 <td align="right">0.6666667</td>
-<td align="right">0.9090909</td>
-<td align="right">NaN</td>
-<td align="right">NaN</td>
+<td align="right">NA</td>
+<td align="right">NA</td>
 </tr>
 </tbody>
 </table>
@@ -322,24 +322,24 @@ kable(dtm.eval.svmradial)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">NaN</td>
-<td align="right">0.1666667</td>
-<td align="right">0.60</td>
-<td align="right">NaN</td>
+<td align="right">0.6666667</td>
+<td align="right">1</td>
+<td align="right">0.7500000</td>
+<td align="right">0.8055556</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0</td>
-<td align="right">1.0000000</td>
-<td align="right">1.00</td>
 <td align="right">0.6666667</td>
+<td align="right">1</td>
+<td align="right">1.0000000</td>
+<td align="right">0.8888889</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">NaN</td>
-<td align="right">0.2857143</td>
-<td align="right">0.75</td>
-<td align="right">NaN</td>
+<td align="right">0.6666667</td>
+<td align="right">1</td>
+<td align="right">0.8571429</td>
+<td align="right">0.8412698</td>
 </tr>
 </tbody>
 </table>
@@ -358,24 +358,24 @@ kable(dtm.eval.svmlinear)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
+<td align="right">0.4000000</td>
 <td align="right">1.0000000</td>
-<td align="right">0.5000000</td>
-<td align="right">0.5000000</td>
-<td align="right">0.6666667</td>
+<td align="right">1</td>
+<td align="right">0.8000000</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.8000000</td>
 <td align="right">1.0000000</td>
-<td align="right">1.0000000</td>
-<td align="right">0.9333333</td>
+<td align="right">0.7500000</td>
+<td align="right">1</td>
+<td align="right">0.9166667</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.8888889</td>
-<td align="right">0.6666667</td>
-<td align="right">0.6666667</td>
-<td align="right">0.7407407</td>
+<td align="right">0.5714286</td>
+<td align="right">0.8571429</td>
+<td align="right">1</td>
+<td align="right">0.8095238</td>
 </tr>
 </tbody>
 </table>
@@ -399,24 +399,24 @@ kable(tfidf.eval.nb)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">1.0000000</td>
-<td align="right">1</td>
+<td align="right">NaN</td>
+<td align="right">0.5000000</td>
 <td align="right">0.6666667</td>
-<td align="right">0.8888889</td>
+<td align="right">NaN</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.3333333</td>
-<td align="right">1</td>
-<td align="right">0.6666667</td>
+<td align="right">0</td>
+<td align="right">1.0000000</td>
+<td align="right">1.0000000</td>
 <td align="right">0.6666667</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.5000000</td>
-<td align="right">1</td>
+<td align="right">NaN</td>
 <td align="right">0.6666667</td>
-<td align="right">0.7222222</td>
+<td align="right">0.8000000</td>
+<td align="right">NaN</td>
 </tr>
 </tbody>
 </table>
@@ -435,22 +435,22 @@ kable(tfidf.eval.svmradial)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">1</td>
 <td align="right">0.5000000</td>
+<td align="right">1</td>
 <td align="right">0.60</td>
 <td align="right">0.7000000</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">1</td>
 <td align="right">1.0000000</td>
+<td align="right">1</td>
 <td align="right">1.00</td>
 <td align="right">1.0000000</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">1</td>
 <td align="right">0.6666667</td>
+<td align="right">1</td>
 <td align="right">0.75</td>
 <td align="right">0.8055556</td>
 </tr>
@@ -471,24 +471,24 @@ kable(tfidf.eval.svmlinear)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">NaN</td>
+<td align="right">0.5000000</td>
+<td align="right">1.0000000</td>
 <td align="right">0.60</td>
-<td align="right">0.3333333</td>
-<td align="right">NaN</td>
+<td align="right">0.7000000</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0</td>
-<td align="right">1.00</td>
 <td align="right">1.0000000</td>
 <td align="right">0.6666667</td>
+<td align="right">1.00</td>
+<td align="right">0.8888889</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">NaN</td>
+<td align="right">0.6666667</td>
+<td align="right">0.8000000</td>
 <td align="right">0.75</td>
-<td align="right">0.5000000</td>
-<td align="right">NaN</td>
+<td align="right">0.7388889</td>
 </tr>
 </tbody>
 </table>
@@ -511,24 +511,24 @@ kable(lsa.eval.nb)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">1.0000000</td>
-<td align="right">0.4000000</td>
-<td align="right">0.4000000</td>
-<td align="right">0.6000000</td>
+<td align="right">0.5</td>
+<td align="right">0</td>
+<td align="right">0.75</td>
+<td align="right">0.4166667</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.5000000</td>
-<td align="right">1.0000000</td>
-<td align="right">0.6666667</td>
-<td align="right">0.7222222</td>
+<td align="right">0.5</td>
+<td align="right">0</td>
+<td align="right">0.75</td>
+<td align="right">0.4166667</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.6666667</td>
-<td align="right">0.5714286</td>
-<td align="right">0.5000000</td>
-<td align="right">0.5793651</td>
+<td align="right">0.5</td>
+<td align="right">NaN</td>
+<td align="right">0.75</td>
+<td align="right">NaN</td>
 </tr>
 </tbody>
 </table>
@@ -547,24 +547,24 @@ kable(lsa.eval.svmradial)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.6666667</td>
 <td align="right">NaN</td>
-<td align="right">1.0000000</td>
+<td align="right">NA</td>
 <td align="right">NaN</td>
+<td align="right">NA</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.6666667</td>
 <td align="right">0</td>
-<td align="right">0.6666667</td>
-<td align="right">0.4444444</td>
+<td align="right">NA</td>
+<td align="right">0</td>
+<td align="right">NA</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.6666667</td>
 <td align="right">NaN</td>
-<td align="right">0.8000000</td>
+<td align="right">NA</td>
 <td align="right">NaN</td>
+<td align="right">NA</td>
 </tr>
 </tbody>
 </table>
@@ -583,24 +583,24 @@ kable(lsa.eval.svmlinear)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.6666667</td>
-<td align="right">1.0000000</td>
-<td align="right">NaN</td>
-<td align="right">NaN</td>
+<td align="right">1.00</td>
+<td align="right">1</td>
+<td align="right">0.4000000</td>
+<td align="right">0.8000000</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.6666667</td>
-<td align="right">0.6666667</td>
-<td align="right">0</td>
-<td align="right">0.4444444</td>
+<td align="right">0.25</td>
+<td align="right">1</td>
+<td align="right">1.0000000</td>
+<td align="right">0.7500000</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.6666667</td>
-<td align="right">0.8000000</td>
-<td align="right">NaN</td>
-<td align="right">NaN</td>
+<td align="right">0.40</td>
+<td align="right">1</td>
+<td align="right">0.5714286</td>
+<td align="right">0.6571429</td>
 </tr>
 </tbody>
 </table>
@@ -624,24 +624,24 @@ kable(pca.eval.nb)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">1.0000000</td>
-<td align="right">0.4000000</td>
-<td align="right">0.5000000</td>
-<td align="right">0.6333333</td>
+<td align="right">0.2500000</td>
+<td align="right">0.5</td>
+<td align="right">0</td>
+<td align="right">0.2500000</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.2000000</td>
-<td align="right">1.0000000</td>
-<td align="right">1.0000000</td>
-<td align="right">0.7333333</td>
+<td align="right">0.3333333</td>
+<td align="right">0.5</td>
+<td align="right">0</td>
+<td align="right">0.2777778</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.3333333</td>
-<td align="right">0.5714286</td>
-<td align="right">0.6666667</td>
-<td align="right">0.5238095</td>
+<td align="right">0.2857143</td>
+<td align="right">0.5</td>
+<td align="right">NaN</td>
+<td align="right">NaN</td>
 </tr>
 </tbody>
 </table>
@@ -660,23 +660,23 @@ kable(pca.eval.svmradial)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.3333333</td>
-<td align="right">0.3333333</td>
 <td align="right">NaN</td>
+<td align="right">1.0000000</td>
+<td align="right">0.5000000</td>
 <td align="right">NaN</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">1.0000000</td>
-<td align="right">1.0000000</td>
 <td align="right">0</td>
 <td align="right">0.6666667</td>
+<td align="right">0.3333333</td>
+<td align="right">0.3333333</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.5000000</td>
-<td align="right">0.5000000</td>
 <td align="right">NaN</td>
+<td align="right">0.8000000</td>
+<td align="right">0.4000000</td>
 <td align="right">NaN</td>
 </tr>
 </tbody>
@@ -697,23 +697,23 @@ kable(pca.eval.svmlinear)</code></pre>
 <tr class="odd">
 <td>Precision</td>
 <td align="right">1</td>
-<td align="right">0.8000000</td>
-<td align="right">0.6666667</td>
-<td align="right">0.8222222</td>
+<td align="right">0.3333333</td>
+<td align="right">1</td>
+<td align="right">0.7777778</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
 <td align="right">1</td>
 <td align="right">1.0000000</td>
-<td align="right">1.0000000</td>
+<td align="right">1</td>
 <td align="right">1.0000000</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
 <td align="right">1</td>
-<td align="right">0.8888889</td>
-<td align="right">0.8000000</td>
-<td align="right">0.8962963</td>
+<td align="right">0.5000000</td>
+<td align="right">1</td>
+<td align="right">0.8333333</td>
 </tr>
 </tbody>
 </table>
@@ -731,10 +731,10 @@ dim(document_term_matrix)</code></pre>
 model2 = model.fit(as.matrix(document_term_matrix), y, 'svmlinear')
 model3 = model.fit(dtm.pca, y.tfidf, 'svmlinear')
 
-# Save Models as usermodelX.rda
-save(model1, file=&quot;polimodel1.rda&quot;)
-save(model2, file=&quot;polimodel2.rda&quot;)
-save(model3, file=&quot;polimodel3.rda&quot;)</code></pre>
+## Save with 
+saveRDS(model1, &quot;./polimodel1.rds&quot;)
+saveRDS(model2, &quot;./polimodel2.rds&quot;)
+saveRDS(model3, &quot;./polimodel3.rds&quot;)</code></pre>
 </div>
 </div>
 </div>
