--- a/ModelPoliticians.html
+++ b/ModelPoliticians.html
@@ -120,8 +120,8 @@ $(document).ready(function () {
 </div>
 
 
-<div id="helper-functions" class="section level1">
-<h1>Helper Functions</h1>
+<div id="helper-functions" class="section level2">
+<h2>Helper Functions</h2>
 <pre class="r"><code>load.data.politicians &lt;- function() {
   # preprocessed in python
   tweets = read.csv('tweets_by_politicians.csv') # data is preprocessed in python
@@ -158,12 +158,6 @@ model.fit &lt;- function(X_train, y_train, classifier) {
           model = naiveBayes(x=X_train, y=y_train)
           # y_predictions = predict(model, newdata=X_test)
          },
-        lib = {
-          X_train = as.matrix.csr(X_train)  # 1,244
-          model = LiblineaR(X_train, y_train)
-          X_test2 = as.matrix.csr(X_test)
-          y_predictions = predict(model, newx=X_test2)
-        },
         svmradial = {
           X_train = as.matrix.csr(X_train)  # 1,244
           # X_test  = as.matrix.csr(X_test)    # 622
@@ -184,9 +178,6 @@ model.fit &lt;- function(X_train, y_train, classifier) {
 model.predict &lt;- function(X_test, model) {
   # X_test = as.data.frame(X_test)
   y_predictions = predict(model, newdata=X_test)
-  # if probabilties
-  ## probs = predict(model, newdata=X_test)
-  ## y_predictions = as.numeric(probs &gt; .50)
   return(y_predictions)
 }
 
@@ -232,8 +223,8 @@ crossValidate &lt;- function(document_term_matrix, y, classifier, k.fold=3) {
   return(eval)
 }</code></pre>
 </div>
-<div id="load-data-create-dtms" class="section level1">
-<h1>Load Data &amp; Create DTMs</h1>
+<div id="load-data-create-dtms" class="section level2">
+<h2>Load Data &amp; Create DTMs</h2>
 <pre class="r"><code>poli.tweets = load.data.politicians()
 
 # Get corpus
@@ -256,8 +247,9 @@ dim(dtm.lsa.10)</code></pre>
 <pre class="r"><code>dim(dtm.pca)</code></pre>
 <pre><code>## [1] 18 18</code></pre>
 </div>
-<div id="build-model-on-politicians-data" class="section level1">
-<h1>Build Model on Politician’s Data</h1>
+<div id="build-model-on-politicians-twitter-data" class="section level2">
+<h2>Build Model on Politician’s Twitter Data</h2>
+</div>
 <div id="run-cross-validation" class="section level2">
 <h2>Run Cross Validation</h2>
 <div id="features-standard-dtm-tfidf-dtm-lsa-dtm-and-pca-dtm" class="section level4">
@@ -266,9 +258,8 @@ dim(dtm.lsa.10)</code></pre>
 <div id="classifiers-naive-bayes-svm-radial-kernel-svm-linear-kernel" class="section level4">
 <h4>Classifiers: Naive Bayes, SVM-Radial Kernel, SVM-Linear Kernel</h4>
 </div>
-</div>
-<div id="standard-document-term-matrix" class="section level2">
-<h2>Standard Document Term Matrix</h2>
+<div id="standard-document-term-matrix" class="section level3">
+<h3>Standard Document Term Matrix</h3>
 <pre class="r"><code># Standard Document Term Matrix
 ### Classifiers - NB, SVMRadial, SVMLinear
 dtm.eval.nb = crossValidate(document_term_matrix, y, 'nb')
@@ -286,24 +277,24 @@ kable(dtm.eval.nb)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">NA</td>
 <td align="right">0.5000000</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
+<td align="right">0.7500000</td>
+<td align="right">0.5000000</td>
+<td align="right">0.5833333</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">NA</td>
 <td align="right">1.0000000</td>
-<td align="right">1</td>
-<td align="right">NA</td>
+<td align="right">1.0000000</td>
+<td align="right">1.0000000</td>
+<td align="right">1.0000000</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">NA</td>
 <td align="right">0.6666667</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
+<td align="right">0.8571429</td>
+<td align="right">0.6666667</td>
+<td align="right">0.7301587</td>
 </tr>
 </tbody>
 </table>
@@ -322,24 +313,24 @@ kable(dtm.eval.svmradial)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.6666667</td>
-<td align="right">1</td>
 <td align="right">0.7500000</td>
-<td align="right">0.8055556</td>
+<td align="right">0.3333333</td>
+<td align="right">1.0000000</td>
+<td align="right">0.6944444</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.6666667</td>
-<td align="right">1</td>
 <td align="right">1.0000000</td>
-<td align="right">0.8888889</td>
+<td align="right">1.0000000</td>
+<td align="right">0.7500000</td>
+<td align="right">0.9166667</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.6666667</td>
-<td align="right">1</td>
 <td align="right">0.8571429</td>
-<td align="right">0.8412698</td>
+<td align="right">0.5000000</td>
+<td align="right">0.8571429</td>
+<td align="right">0.7380952</td>
 </tr>
 </tbody>
 </table>
@@ -358,30 +349,30 @@ kable(dtm.eval.svmlinear)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.4000000</td>
-<td align="right">1.0000000</td>
-<td align="right">1</td>
 <td align="right">0.8000000</td>
+<td align="right">0.6666667</td>
+<td align="right">1</td>
+<td align="right">0.8222222</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
 <td align="right">1.0000000</td>
-<td align="right">0.7500000</td>
+<td align="right">1.0000000</td>
 <td align="right">1</td>
-<td align="right">0.9166667</td>
+<td align="right">1.0000000</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.5714286</td>
-<td align="right">0.8571429</td>
+<td align="right">0.8888889</td>
+<td align="right">0.8000000</td>
 <td align="right">1</td>
-<td align="right">0.8095238</td>
+<td align="right">0.8962963</td>
 </tr>
 </tbody>
 </table>
 </div>
-<div id="tfidf-document-term-matrix" class="section level2">
-<h2>TFIDF Document Term Matrix</h2>
+<div id="tfidf-document-term-matrix" class="section level3">
+<h3>TFIDF Document Term Matrix</h3>
 <pre class="r"><code># TFIDF Weighted Document Term Matrix, use y.tfidf
 ### Classifiers - NB, SVMRadial, SVMLinear
 tfidf.eval.nb = crossValidate(dtm.tfidf, y.tfidf, 'nb')
@@ -399,23 +390,23 @@ kable(tfidf.eval.nb)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
+<td align="right">1.0000000</td>
 <td align="right">NaN</td>
-<td align="right">0.5000000</td>
-<td align="right">0.6666667</td>
+<td align="right">0.1666667</td>
 <td align="right">NaN</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
+<td align="right">0.5000000</td>
 <td align="right">0</td>
 <td align="right">1.0000000</td>
-<td align="right">1.0000000</td>
-<td align="right">0.6666667</td>
+<td align="right">0.5</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">NaN</td>
 <td align="right">0.6666667</td>
-<td align="right">0.8000000</td>
+<td align="right">NaN</td>
+<td align="right">0.2857143</td>
 <td align="right">NaN</td>
 </tr>
 </tbody>
@@ -436,23 +427,23 @@ kable(tfidf.eval.svmradial)</code></pre>
 <tr class="odd">
 <td>Precision</td>
 <td align="right">0.5000000</td>
-<td align="right">1</td>
 <td align="right">0.60</td>
-<td align="right">0.7000000</td>
+<td align="right">0.60</td>
+<td align="right">0.5666667</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
 <td align="right">1.0000000</td>
-<td align="right">1</td>
+<td align="right">1.00</td>
 <td align="right">1.00</td>
 <td align="right">1.0000000</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
 <td align="right">0.6666667</td>
-<td align="right">1</td>
 <td align="right">0.75</td>
-<td align="right">0.8055556</td>
+<td align="right">0.75</td>
+<td align="right">0.7222222</td>
 </tr>
 </tbody>
 </table>
@@ -471,30 +462,30 @@ kable(tfidf.eval.svmlinear)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
+<td align="right">0.3333333</td>
 <td align="right">0.5000000</td>
-<td align="right">1.0000000</td>
-<td align="right">0.60</td>
-<td align="right">0.7000000</td>
+<td align="right">NaN</td>
+<td align="right">NaN</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
 <td align="right">1.0000000</td>
+<td align="right">1.0000000</td>
+<td align="right">0</td>
 <td align="right">0.6666667</td>
-<td align="right">1.00</td>
-<td align="right">0.8888889</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
+<td align="right">0.5000000</td>
 <td align="right">0.6666667</td>
-<td align="right">0.8000000</td>
-<td align="right">0.75</td>
-<td align="right">0.7388889</td>
+<td align="right">NaN</td>
+<td align="right">NaN</td>
 </tr>
 </tbody>
 </table>
 </div>
-<div id="lsa-dtm" class="section level2">
-<h2>LSA DTM</h2>
+<div id="lsa-dtm" class="section level3">
+<h3>LSA DTM</h3>
 <pre class="r"><code># LSA Document Term Matrix w/10 features, use y.tfidf
 lsa.eval.nb = crossValidate(dtm.lsa.10, y.tfidf, 'nb')
 kable(lsa.eval.nb)</code></pre>
@@ -511,24 +502,24 @@ kable(lsa.eval.nb)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.5</td>
-<td align="right">0</td>
-<td align="right">0.75</td>
-<td align="right">0.4166667</td>
+<td align="right">0.6666667</td>
+<td align="right">0.4000000</td>
+<td align="right">0.5000000</td>
+<td align="right">0.5222222</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.5</td>
-<td align="right">0</td>
-<td align="right">0.75</td>
-<td align="right">0.4166667</td>
+<td align="right">1.0000000</td>
+<td align="right">1.0000000</td>
+<td align="right">0.3333333</td>
+<td align="right">0.7777778</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.5</td>
-<td align="right">NaN</td>
-<td align="right">0.75</td>
-<td align="right">NaN</td>
+<td align="right">0.8000000</td>
+<td align="right">0.5714286</td>
+<td align="right">0.4000000</td>
+<td align="right">0.5904762</td>
 </tr>
 </tbody>
 </table>
@@ -548,23 +539,23 @@ kable(lsa.eval.svmradial)</code></pre>
 <tr class="odd">
 <td>Precision</td>
 <td align="right">NaN</td>
-<td align="right">NA</td>
+<td align="right">0.3333333</td>
+<td align="right">1.0000000</td>
 <td align="right">NaN</td>
-<td align="right">NA</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
 <td align="right">0</td>
-<td align="right">NA</td>
-<td align="right">0</td>
-<td align="right">NA</td>
+<td align="right">1.0000000</td>
+<td align="right">0.6666667</td>
+<td align="right">0.5555556</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
 <td align="right">NaN</td>
-<td align="right">NA</td>
+<td align="right">0.5000000</td>
+<td align="right">0.8000000</td>
 <td align="right">NaN</td>
-<td align="right">NA</td>
 </tr>
 </tbody>
 </table>
@@ -583,30 +574,30 @@ kable(lsa.eval.svmlinear)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">1.00</td>
-<td align="right">1</td>
-<td align="right">0.4000000</td>
-<td align="right">0.8000000</td>
+<td align="right">NaN</td>
+<td align="right">0.5000000</td>
+<td align="right">0.5000000</td>
+<td align="right">NaN</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.25</td>
-<td align="right">1</td>
+<td align="right">0</td>
 <td align="right">1.0000000</td>
-<td align="right">0.7500000</td>
+<td align="right">0.6666667</td>
+<td align="right">0.5555556</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.40</td>
-<td align="right">1</td>
+<td align="right">NaN</td>
+<td align="right">0.6666667</td>
 <td align="right">0.5714286</td>
-<td align="right">0.6571429</td>
+<td align="right">NaN</td>
 </tr>
 </tbody>
 </table>
 </div>
-<div id="pca-dtm" class="section level2">
-<h2>PCA DTM</h2>
+<div id="pca-dtm" class="section level3">
+<h3>PCA DTM</h3>
 <pre class="r"><code># PCA Document Term Matrix
 ### Classifiers - NB, SVMRadial, SVMLinear
 pca.eval.nb = crossValidate(dtm.pca, y, 'nb')
@@ -624,22 +615,22 @@ kable(pca.eval.nb)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.2500000</td>
-<td align="right">0.5</td>
-<td align="right">0</td>
-<td align="right">0.2500000</td>
+<td align="right">1.0000000</td>
+<td align="right">0.1666667</td>
+<td align="right">NaN</td>
+<td align="right">NaN</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.3333333</td>
-<td align="right">0.5</td>
+<td align="right">0.6666667</td>
+<td align="right">1.0000000</td>
 <td align="right">0</td>
-<td align="right">0.2777778</td>
+<td align="right">0.5555556</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
+<td align="right">0.8000000</td>
 <td align="right">0.2857143</td>
-<td align="right">0.5</td>
 <td align="right">NaN</td>
 <td align="right">NaN</td>
 </tr>
@@ -661,22 +652,22 @@ kable(pca.eval.svmradial)</code></pre>
 <tr class="odd">
 <td>Precision</td>
 <td align="right">NaN</td>
-<td align="right">1.0000000</td>
-<td align="right">0.5000000</td>
+<td align="right">0.1666667</td>
+<td align="right">NaN</td>
 <td align="right">NaN</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
 <td align="right">0</td>
-<td align="right">0.6666667</td>
-<td align="right">0.3333333</td>
+<td align="right">1.0000000</td>
+<td align="right">0</td>
 <td align="right">0.3333333</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
 <td align="right">NaN</td>
-<td align="right">0.8000000</td>
-<td align="right">0.4000000</td>
+<td align="right">0.2857143</td>
+<td align="right">NaN</td>
 <td align="right">NaN</td>
 </tr>
 </tbody>
@@ -696,30 +687,30 @@ kable(pca.eval.svmlinear)</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
+<td align="right">0.60</td>
 <td align="right">1</td>
-<td align="right">0.3333333</td>
-<td align="right">1</td>
-<td align="right">0.7777778</td>
+<td align="right">0.5000000</td>
+<td align="right">0.7000000</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
+<td align="right">1.00</td>
 <td align="right">1</td>
 <td align="right">1.0000000</td>
-<td align="right">1</td>
 <td align="right">1.0000000</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
+<td align="right">0.75</td>
 <td align="right">1</td>
-<td align="right">0.5000000</td>
-<td align="right">1</td>
-<td align="right">0.8333333</td>
+<td align="right">0.6666667</td>
+<td align="right">0.8055556</td>
 </tr>
 </tbody>
 </table>
 </div>
-<div id="save-3-top-models" class="section level2">
-<h2>Save 3 Top Models</h2>
+<div id="save-3-top-models" class="section level3">
+<h3>Save 3 Top Models</h3>
 <div id="top-models-dtm.eval.svmradial-88.57-dtm.eval.svmlinear-85.71-pca.eval.svmlinear-80.95" class="section level5">
 <h5>Top Models: dtm.eval.svmradial (88.57%), dtm.eval.svmlinear (85.71%), pca.eval.svmlinear (80.95%)</h5>
 <pre class="r"><code># Get models based of of mean F1 score
