--- a/ModelDRs.html
+++ b/ModelDRs.html
@@ -120,8 +120,6 @@ $(document).ready(function () {
 </div>
 
 
-<div id="model-domcratic-and-republican-twitter-users" class="section level1">
-<h1>Model Domcratic and Republican Twitter Users</h1>
 <div id="helper-functions" class="section level2">
 <h2>Helper Functions</h2>
 <pre class="r"><code>load.data.DR &lt;- function() {
@@ -161,12 +159,6 @@ model.fit &lt;- function(X_train, y_train, classifier) {
           model = naiveBayes(x=X_train, y=y_train)
           # y_predictions = predict(model, newdata=X_test)
          },
-        lib = {
-          X_train = as.matrix.csr(X_train)  # 1,244
-          model = LiblineaR(X_train, y_train)
-          X_test2 = as.matrix.csr(X_test)
-          y_predictions = predict(model, newx=X_test2)
-        },
         svmradial = {
           X_train = as.matrix.csr(X_train)  # 1,244
           # X_test  = as.matrix.csr(X_test)    # 622
@@ -255,7 +247,7 @@ dtm.tfidf = dtm.tfidf[row.totals &gt; 0, ] # 1247 rows
 y.tfidf   = y[row.totals &gt; 0]
 
 # Get reduced DTMs
-## PCA, LSA, MDS
+## PCA and LSA
 dtm.lsa.10 = do.lsa(dtm.tfidf, ndims=10) # 1264, 10; Matrix object
 dtm.pca = do.pca(document_term_matrix) # 1264, 1264; Matrix object
 
@@ -327,10 +319,10 @@ kable(dtm.eval.svmradial) # ~82.14%</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.6888361</td>
-<td align="right">0.7014218</td>
-<td align="right">0.7007126</td>
-<td align="right">0.6969902</td>
+<td align="right">0.6935867</td>
+<td align="right">0.6872038</td>
+<td align="right">0.7102138</td>
+<td align="right">0.6970014</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
@@ -341,10 +333,10 @@ kable(dtm.eval.svmradial) # ~82.14%</code></pre>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.8157525</td>
-<td align="right">0.8245125</td>
-<td align="right">0.8240223</td>
-<td align="right">0.8214291</td>
+<td align="right">0.8190743</td>
+<td align="right">0.8146067</td>
+<td align="right">0.8305556</td>
+<td align="right">0.8214122</td>
 </tr>
 </tbody>
 </table>
@@ -363,24 +355,24 @@ kable(dtm.eval.svmlinear) # ~73%</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.6982249</td>
-<td align="right">0.6993671</td>
-<td align="right">0.7299035</td>
-<td align="right">0.7091652</td>
+<td align="right">0.7084639</td>
+<td align="right">0.7163743</td>
+<td align="right">0.7120253</td>
+<td align="right">0.7122878</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.8082192</td>
-<td align="right">0.7727273</td>
-<td align="right">0.7491749</td>
-<td align="right">0.7767071</td>
+<td align="right">0.7558528</td>
+<td align="right">0.8506944</td>
+<td align="right">0.7653061</td>
+<td align="right">0.7906178</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.7492063</td>
-<td align="right">0.7342193</td>
-<td align="right">0.7394137</td>
-<td align="right">0.7409464</td>
+<td align="right">0.7313916</td>
+<td align="right">0.7777778</td>
+<td align="right">0.7377049</td>
+<td align="right">0.7489581</td>
 </tr>
 </tbody>
 </table>
@@ -404,24 +396,24 @@ kable(tfidf.eval.nb)        # ~11.92%</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.8800000</td>
-<td align="right">0.8214286</td>
-<td align="right">0.9411765</td>
-<td align="right">0.8808683</td>
+<td align="right">0.8666667</td>
+<td align="right">0.9333333</td>
+<td align="right">0.7777778</td>
+<td align="right">0.8592593</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.0753425</td>
-<td align="right">0.0784983</td>
-<td align="right">0.0565371</td>
-<td align="right">0.0701260</td>
+<td align="right">0.0443686</td>
+<td align="right">0.0942761</td>
+<td align="right">0.0503597</td>
+<td align="right">0.0630015</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.1388013</td>
-<td align="right">0.1433022</td>
-<td align="right">0.1066667</td>
-<td align="right">0.1295900</td>
+<td align="right">0.0844156</td>
+<td align="right">0.1712538</td>
+<td align="right">0.0945946</td>
+<td align="right">0.1167547</td>
 </tr>
 </tbody>
 </table>
@@ -440,10 +432,10 @@ kable(tfidf.eval.svmradial) # ~82.08</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.6939759</td>
-<td align="right">0.7163462</td>
-<td align="right">0.6778846</td>
-<td align="right">0.6960689</td>
+<td align="right">0.6867470</td>
+<td align="right">0.7211538</td>
+<td align="right">0.6802885</td>
+<td align="right">0.6960631</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
@@ -454,10 +446,10 @@ kable(tfidf.eval.svmradial) # ~82.08</code></pre>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.8193457</td>
-<td align="right">0.8347339</td>
-<td align="right">0.8080229</td>
-<td align="right">0.8207008</td>
+<td align="right">0.8142857</td>
+<td align="right">0.8379888</td>
+<td align="right">0.8097282</td>
+<td align="right">0.8206676</td>
 </tr>
 </tbody>
 </table>
@@ -476,24 +468,24 @@ kable(tfidf.eval.svmlinear) # ~81.56</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.7179487</td>
-<td align="right">0.6766917</td>
-<td align="right">0.7095960</td>
-<td align="right">0.7014121</td>
+<td align="right">0.7012658</td>
+<td align="right">0.7326478</td>
+<td align="right">0.6608040</td>
+<td align="right">0.6982392</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.9523810</td>
-<td align="right">0.9642857</td>
-<td align="right">0.9557823</td>
-<td align="right">0.9574830</td>
+<td align="right">0.9486301</td>
+<td align="right">0.9531773</td>
+<td align="right">0.9494585</td>
+<td align="right">0.9504220</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.8187135</td>
-<td align="right">0.7952872</td>
-<td align="right">0.8144928</td>
-<td align="right">0.8094978</td>
+<td align="right">0.8064047</td>
+<td align="right">0.8284884</td>
+<td align="right">0.7792593</td>
+<td align="right">0.8047174</td>
 </tr>
 </tbody>
 </table>
@@ -516,24 +508,24 @@ kable(lsa.eval.nb)        # ~NA</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">NaN</td>
-<td align="right">0</td>
-<td align="right">0.7331731</td>
-<td align="right">NaN</td>
+<td align="right">0.5000000</td>
+<td align="right">0.5000000</td>
+<td align="right">0.7325301</td>
+<td align="right">0.5775100</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0</td>
-<td align="right">0</td>
-<td align="right">1.0000000</td>
-<td align="right">0.3333333</td>
+<td align="right">0.0036630</td>
+<td align="right">0.0034483</td>
+<td align="right">0.9967213</td>
+<td align="right">0.3346109</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">NaN</td>
-<td align="right">NaN</td>
-<td align="right">0.8460472</td>
-<td align="right">NaN</td>
+<td align="right">0.0072727</td>
+<td align="right">0.0068493</td>
+<td align="right">0.8444444</td>
+<td align="right">0.2861888</td>
 </tr>
 </tbody>
 </table>
@@ -552,10 +544,10 @@ kable(lsa.eval.svmradial) # ~82.07%</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.7253012</td>
-<td align="right">0.6490385</td>
-<td align="right">0.7139423</td>
-<td align="right">0.6960940</td>
+<td align="right">0.7204819</td>
+<td align="right">0.6947115</td>
+<td align="right">0.6730769</td>
+<td align="right">0.6960901</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
@@ -566,10 +558,10 @@ kable(lsa.eval.svmradial) # ~82.07%</code></pre>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.8407821</td>
-<td align="right">0.7871720</td>
-<td align="right">0.8330996</td>
-<td align="right">0.8203512</td>
+<td align="right">0.8375350</td>
+<td align="right">0.8198582</td>
+<td align="right">0.8045977</td>
+<td align="right">0.8206636</td>
 </tr>
 </tbody>
 </table>
@@ -588,10 +580,10 @@ kable(lsa.eval.svmlinear) # ~82.08%</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.6915663</td>
-<td align="right">0.7091346</td>
-<td align="right">0.6875000</td>
-<td align="right">0.6960670</td>
+<td align="right">0.6987952</td>
+<td align="right">0.6923077</td>
+<td align="right">0.6971154</td>
+<td align="right">0.6960728</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
@@ -602,10 +594,10 @@ kable(lsa.eval.svmlinear) # ~82.08%</code></pre>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.8176638</td>
-<td align="right">0.8298172</td>
-<td align="right">0.8148148</td>
-<td align="right">0.8207653</td>
+<td align="right">0.8226950</td>
+<td align="right">0.8181818</td>
+<td align="right">0.8215297</td>
+<td align="right">0.8208022</td>
 </tr>
 </tbody>
 </table>
@@ -629,24 +621,24 @@ kable(pca.eval.nb)        # ~51.22%</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.7902098</td>
-<td align="right">0.8076923</td>
-<td align="right">0.6890244</td>
-<td align="right">0.7623088</td>
+<td align="right">0.7500000</td>
+<td align="right">0.7660819</td>
+<td align="right">0.7315789</td>
+<td align="right">0.7492203</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.3766667</td>
-<td align="right">0.4214047</td>
-<td align="right">0.4007092</td>
-<td align="right">0.3995935</td>
+<td align="right">0.4000000</td>
+<td align="right">0.4517241</td>
+<td align="right">0.4776632</td>
+<td align="right">0.4431291</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.5101580</td>
-<td align="right">0.5538462</td>
-<td align="right">0.5067265</td>
-<td align="right">0.5235769</td>
+<td align="right">0.5217391</td>
+<td align="right">0.5683297</td>
+<td align="right">0.5779626</td>
+<td align="right">0.5560105</td>
 </tr>
 </tbody>
 </table>
@@ -665,10 +657,10 @@ kable(pca.eval.svmradial) # ~82.10%</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.6817102</td>
-<td align="right">0.7109005</td>
-<td align="right">0.6983373</td>
-<td align="right">0.6969827</td>
+<td align="right">0.7102138</td>
+<td align="right">0.7085308</td>
+<td align="right">0.6722090</td>
+<td align="right">0.6969845</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
@@ -679,10 +671,10 @@ kable(pca.eval.svmradial) # ~82.10%</code></pre>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.8107345</td>
-<td align="right">0.8310249</td>
-<td align="right">0.8223776</td>
-<td align="right">0.8213790</td>
+<td align="right">0.8305556</td>
+<td align="right">0.8294036</td>
+<td align="right">0.8039773</td>
+<td align="right">0.8213121</td>
 </tr>
 </tbody>
 </table>
@@ -701,24 +693,24 @@ kable(pca.eval.svmlinear) # ~73.67%</code></pre>
 <tbody>
 <tr class="odd">
 <td>Precision</td>
-<td align="right">0.6916168</td>
-<td align="right">0.7198795</td>
-<td align="right">0.7227723</td>
-<td align="right">0.7114229</td>
+<td align="right">0.7182663</td>
+<td align="right">0.6974522</td>
+<td align="right">0.7308869</td>
+<td align="right">0.7155351</td>
 </tr>
 <tr class="even">
 <td>Recall</td>
-<td align="right">0.8105263</td>
+<td align="right">0.7918089</td>
+<td align="right">0.7577855</td>
 <td align="right">0.7993311</td>
-<td align="right">0.7373737</td>
-<td align="right">0.7824104</td>
+<td align="right">0.7829751</td>
 </tr>
 <tr class="odd">
 <td>F1</td>
-<td align="right">0.7463651</td>
-<td align="right">0.7575277</td>
-<td align="right">0.7300000</td>
-<td align="right">0.7446309</td>
+<td align="right">0.7532468</td>
+<td align="right">0.7263682</td>
+<td align="right">0.7635783</td>
+<td align="right">0.7477311</td>
 </tr>
 </tbody>
 </table>
@@ -729,19 +721,14 @@ kable(pca.eval.svmlinear) # ~73.67%</code></pre>
 <div id="top-models-dtm.eval.svmradial-82.14-pca.eval.svmradial-82.10-lsa.eval.svmlinear-82.08" class="section level5">
 <h5>Top Models: dtm.eval.svmradial (82.14%), pca.eval.svmradial (82.10%), lsa.eval.svmlinear (82.08%)</h5>
 <pre class="r"><code># Get models based of of mean F1 score
-dim(document_term_matrix)</code></pre>
-<pre><code>## [1]  1264 11897</code></pre>
-<pre class="r"><code>length(y)</code></pre>
-<pre><code>## [1] 1264</code></pre>
-<pre class="r"><code>model1 = model.fit(as.matrix(document_term_matrix), y, 'svmradial')
+model1 = model.fit(as.matrix(document_term_matrix), y, 'svmradial')
 model2 = model.fit(dtm.pca, y, 'svmradial')
 model3 = model.fit(dtm.lsa.10, y.tfidf, 'svmlinear')
 
 # Save Models as usermodelX.rds
-save(model1, file=&quot;usermodel1.rds&quot;)
-save(model2, file=&quot;usermodel2.rds&quot;)
-save(model3, file=&quot;usermodel3.rds&quot;)</code></pre>
-</div>
+saveRDS(model1, &quot;./usermodel1.rds&quot;)
+saveRDS(model2, &quot;./usermodel2.rds&quot;)
+saveRDS(model3, &quot;./usermodel3.rds&quot;)</code></pre>
 </div>
 </div>
 
